fix: add missing cmd/ to git, fix .gitignore pattern
The .gitignore patterns 'otelcol-promptvault' and 'promptvaultctl'
were matching cmd/ subdirectories, preventing CLI entry points from
being committed. Changed to '/otelcol-promptvault' and '/promptvaultctl'
so they only ignore root-level binaries.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Binaries
-otelcol-promptvault
-promptvaultctl
+# Binaries (root-level only)
+/otelcol-promptvault
+/promptvaultctl
 *.exe
 *.dll
 *.so
